fix crt z-index

--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,6 @@ code {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 600;
+  z-index: 5000;
   pointer-events: none;
 }
